// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly mandatory props only 1`] = `
<label
  className="root
        
        
        rootLayoutVertical
        
        rootSizeMedium
        
        
        rootVariantOutline"
  htmlFor="test"
  id="test__label"
  style={Object {}}
>
  <div
    className="label"
    id="test__labelText"
  >
    label
  </div>
  <div
    className="inputContainer"
  >
    <input
      className="input"
      disabled={false}
      id="test"
      onChange={null}
      placeholder={null}
      required={false}
      size={null}
      type="text"
    />
  </div>
</label>
`;

exports[`rendering renders correctly with all props 1`] = `
<label
  className="root
        isRootFullWidth
        isRootInFormLayout
        rootLayoutHorizontal
        isRootRequired
        rootSizeLarge
        hasRootSmallInput
        isRootStateInvalid
        rootVariantFilled"
  htmlFor="test"
  id="test__label"
  style={
    Object {
      "--rui-custom-input-size": 3,
    }
  }
>
  <div
    className="label
          isLabelHidden"
    id="test__labelText"
  >
    label
  </div>
  <div
    className="inputContainer"
  >
    <input
      className="input"
      disabled={true}
      id="test"
      onChange={null}
      placeholder="placeholder"
      required={true}
      size={3}
      type="email"
      value="value"
    />
    <div
      className="bottomLine"
    />
  </div>
  <div
    className="helperText"
    id="test__helperText"
  >
    some help
  </div>
</label>
`;

exports[`rendering renders correctly with hidden label 1`] = `
<label
  className="root
        
        
        rootLayoutVertical
        
        rootSizeMedium
        
        
        rootVariantOutline"
  htmlFor="test"
  id="test__label"
  style={Object {}}
>
  <div
    className="label
          isLabelHidden"
    id="test__labelText"
  >
    label
  </div>
  <div
    className="inputContainer"
  >
    <input
      className="input"
      disabled={false}
      id="test"
      onChange={null}
      placeholder={null}
      required={false}
      size={null}
      type="text"
    />
  </div>
</label>
`;
